korifi_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: korifi-namespace
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
