root_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: root-namespace
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
